# LLM-Medical-Form-Automation-Pipeline

./: README.md  data_validation.py  demographics.json  extraction_patient_info.py  main.py  ocr_experiment.ipynb  ocr_experiment.py  open_source_model.md  pdf_populate.py  pydantic_defs.py  pyproject.toml  soap_eval.py  soap_notes.txt  soap_training_data.json  utils.py
data/: demographics.json  soap_notes.txt  soap_training_data.json
output/: answers.json  field_data.json  out_extracted.json  schema.json
src/: extraction_patient_info.py  pdf_extraction.py  pdf_populate.py  utils.py
